--- a/day4/Contact.html
+++ b/day4/Contact.html
@@ -13,10 +13,10 @@
   <div class="navbar">
     <h1>My Website</h1>
     <ul class="navbar-link">
-      <li><a href="./index.html">Home</a></li>
-      <li><a href="./about.html">About</a></li>
-      <li><a href="./project.html">Projects</a></li>
-      <li><a href="./Contact.html">Contact</a></li>
+      <li><a href="./index.html">HOME</a></li>
+      <li><a href="./about.html">ABOUT</a></li>
+      <li><a href="./project.html">PROJECTS</a></li>
+      <li><a href="./Contact.html">CONTACT</a></li>
       
     </ul>
   </div>
